frontend/tests/errors/ER-043/spaced_break_continue_rejected/test.vx
// @rfc: docs/vexel-rfc.md#expressions--control
// @desc: Loop-control arrows use contiguous tokens only. | Reject spaced forms '-> |' and '-> >'

&^main() -> #i32 {
    i:#i32 = 0;
    (i < 2)@{
        -> |;
    };
    0
}
